<resources>
    <string name="app_name">Space Rush</string>
    <string name="new_game">New Game</string>
    <string name="main_title">Space Rush</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score:</string>
    <string name="restart_game">Restart Game</string>
    <string name="instractions">Instractions:</string>
    <string name="info">Move left or right by clicking on left or right side of the screen. Avoid the object coming down the screen.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your Name:</string>
    <string name="enter">Enter</string>
    <string name="name">Name</string>
    <string name="score_table">Score</string>
    <string name="location">Location</string>
    <string name="lnt">lnt</string>
    <string name="lng">lng</string>
    <string name="high_scores">High Scores</string>
    <string name="title_activity_maps">Map</string>
</resources>
