<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/new_game"
        android:onClick="startGame"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instractions"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="20dp"
        android:textAlignment="center"/>

</LinearLayout>