<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/restartGameButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/restart_game"
        android:onClick="restartGame"/>

</LinearLayout>