<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:text="Player"/>

    <Button
        android:id="@+id/enterButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/enter"
        android:onClick="enter"/>

</LinearLayout>